<resources>
    <string name="app_name">Chat</string>

    <!-- 注册 -->
    <string name="register_nick_name">昵称</string>
    <string name="register_password">密码</string>
    <string name="register_land">登陆</string>
    <string name="register_hint_email_or_phone">请输入邮箱或者手机号</string>
    <string name="register_hint_password">请输入密码</string>
    <string name="register_hint_confirm_password">请确认密码</string>
    <string name="register_hint_nick_name">请输入昵称</string>
    <string name="register_bn_text">注册</string>
    <string name="clickme">clickme</string>
    <string name="welcome_tv_click">点击体验</string>

    <!--忘记密码-->
    <string name="forgot_password">忘记密码</string>
    <string name="forgot_hint_email_or_phone">请输入邮箱</string>
    <string name="forgot_get_codes">获取验证码</string>
    <string name="forgot_new_pwd">新密码</string>
    <string name="forgot_confirm">确认</string>

    <!--修改密码-->
    <string name="change_pwd_old">旧密码</string>
    <string name="change_pwd_new">新密码</string>
    <string name="change_pwd_repeat">重复密码</string>

    <!--tab-->
    <string name="tab_messaging">消息</string>
    <string name="tab_contact">通信录</string>
    <string name="tab_mine">我的</string>

    <!--联系人-->
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friend">新的好友</string>

    <!--我的-->
    <string name="mine_setting">设置</string>
    <string name="mine_share">分享</string>
    <string name="mine_feedback">反馈</string>
    <string name="mine_logout">注销</string>
    <string name="mine_change_pwd">修改密码</string>
    <string name="mine_default_nickname">猜猜我是谁</string>

    <!--个人信息-->
    <string name="user_info_photo">头像</string>
    <string name="user_info_nickname">昵称</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_motto">个性签名</string>

    <!--修改个人信息-->
    <string name="change_user_info_confirm">确认修改</string>
    <string name="change_user_info_change_name">修改昵称</string>
    <string name="change_user_info_change_motto">修改签名</string>
    <string name="send_message">发送</string>

    <!--好友信息-->
    <string name="friend_info_add_friend">添加好友</string>
    <string name="friend_info_message">发消息</string>
    <string name="new_friend_ignore">忽略</string>
    <string name="new_friend_accept">接受</string>

</resources>
