<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ChatBackgroundColor2"
    android:weightSum="1">
    <include layout="@layout/main_toolbar"/>
    <LinearLayout
        android:id="@+id/mine_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_info_size"
        android:orientation="horizontal"
        android:background="@color/white"
        android:clickable="true">
        <cn.edu.stu.chat.view.widget.CircleImageView
            android:id="@+id/mine_photo"
            android:layout_width="@dimen/mine_photo_size"
            android:layout_height="@dimen/mine_photo_size"
            android:src="@mipmap/default_photo"
            android:layout_margin="@dimen/mine_border_margin">
        </cn.edu.stu.chat.view.widget.CircleImageView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/mine_nickname_top_margin"
            android:layout_marginLeft="@dimen/mine_nickname_left_margin"
            android:text="@string/mine_default_nickname"
            android:textSize="@dimen/middle_font_size"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="@dimen/mine_border_margin">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/mine_setting"
           android:textColor="@color/black"
           android:textSize="@dimen/middle_font_size"
           android:layout_margin="@dimen/border_magin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="@dimen/mine_border_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_share"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size"
            android:layout_margin="@dimen/border_magin"/>

    </LinearLayout>
</LinearLayout>