<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/main_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/user_info_photo"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size"/>
        <cn.edu.stu.chat.view.widget.CircleImageView
            android:id="@+id/user_info_photo"
            android:layout_width="@dimen/user_info_photo_size"
            android:layout_height="@dimen/user_info_photo_size"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentRight="true"
            android:src ="@mipmap/default_photo"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/middle_border_magin"
        android:layout_marginRight="@dimen/middle_border_magin"
        android:background="@color/ChatBackgroundColor"/>

    <RelativeLayout
        android:id="@+id/user_info_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/user_info_nickname"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size"/>
        <TextView
            android:id="@+id/user_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:text="猜猜我是谁"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_font_size"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/middle_border_magin"
        android:layout_marginRight="@dimen/middle_border_magin"
        android:background="@color/ChatBackgroundColor"/>

    <RelativeLayout
        android:id="@+id/user_info_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/user_info_sex"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size"/>
        <TextView
            android:id="@+id/user_info_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:text="保密"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_font_size"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/middle_border_magin"
        android:layout_marginRight="@dimen/middle_border_magin"
        android:background="@color/ChatBackgroundColor"/>

    <RelativeLayout
        android:id="@+id/user_info_motto_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/user_info_motto"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_font_size"
            android:clickable="true"/>
        <TextView
            android:id="@+id/user_info_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/middle_border_magin"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:text="PHP是是世界上最好的语言"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_font_size"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/middle_border_magin"
        android:layout_marginRight="@dimen/middle_border_magin"
        android:background="@color/ChatBackgroundColor"/>
</LinearLayout>